@@ -258,7 +258,6 @@ private:
   void rspUnknownPacket ();
   void rspSetThread ();
   void rspReadMem ();
-  void rspWriteMem ();
   void rspReadReg ();
   void rspWriteReg ();
   void rspQuery ();
