@@ -1,5 +1,12 @@
 2016-06-22  Pedro Alves  <pedro@palves.net>
 
+	* src/GdbServer.cpp (GdbServer::rspClientRequest): Remove
+	handling of 'M' packets.
+	(GdbServer::rspWriteMem): Delete.
+	* src/GdbServer.h (GdbServer) <rspWriteMem>: Remove declaration.
+
+2016-06-22  Pedro Alves  <pedro@palves.net>
+
 	* src/GdbServer.cpp (GdbServer::rspClientRequest) <'?'>: Report
 	TARGET_SIGNAL_NONE.
 	(GdbServer::rspReportException): Report "swbreak" along with
